use uninitialized byte array